syntax = "proto3";

service Product {
    rpc CreateProduct (ProductRequest) returns (ProductResponse) {}
    rpc QueryProduct (ProductRequest) returns (ProductResponse) {}
    rpc UpdateProduct (ProductRequest) returns (ProductResponse) {}
}

message ProductRequest {
    string name = 1;
    int64 num = 2;
}

message ProductResponse {
    int64 id = 1;
    int64 createdAt = 2;
    int64 updatedAt = 3;
    string name = 4;
    int64 num = 5;
}